--- a/app/views/ui/index.html.erb
+++ b/app/views/ui/index.html.erb
@@ -1,1 +1,1 @@
-"RLM Capstone Assignment Staging Site Under Construction -- check back soon"
+"RLM Capstone Assignment Site Under Construction -- check back soon"
